- Migrated Chummer to .NET Framework 4.8 to get better DPI scaling behavior in expense charts and slightly better general performance from 4.8's JIT compiler improvements.
- Adding gear that requires something specified for it, e.g. a weapon targeting autosoft, to a vehicle now properly prompts the user to specify the entry for the gear.

Data Changes:
- Sourcerer and Machinist technomancers now have their Fading Value bonuses represented in Chummer.
- Cyberadept and Machinist technomancers now have their Compiling and Decompiling bonuses represented in Chummer.
- Fichetti Pain Inducer can now properly track the 10 charges it has the same way as Stun Batons.
- Fixed all cases where exotic ranged weapons that used ammo of some kind could not be refilled with ammo.
- Fixed incorrect powers for the Bugul and Croki.
- Vehicles that come with sensor functions explicitly specified in their sensor arrays can no longer support more than the eight sensor functions they would be allowed to support.

Build 220
Application Changes:
- Deleting or selling gear that has plugins inside of it no longer causes a crash.
- Characters are now properly compensated when selling an item that is either located inside another item or adds items with non-zero cost.
- When attempting to delete a weapon mount mod, the program will now properly show a confirmation dialog before deleting the mod if the appropriate setting is set.
- If the program is set to confirm deletions, attempts to sell items in Career mode now also confirm if the user wishes to go through with the sale.

Build 219
Application Changes:
- Fixed a bug preventing any override, custom, or amend files from processing.
- Fixed a source of unpredictable crashes that would happen seemingly for no reason at random points in time.
- Fixed crashes that could happen where removing certain plugins, accessories, and other items with parentage in Career mode. Fixes #4681.

Build 218
Application Changes: