@@ -30,6 +30,7 @@ namespace Chummer
     public class TaggedObservableCollection<T> : ThreadSafeObservableCollection<T>
     {
         private readonly LockingDictionary<object, NotifyCollectionChangedEventHandler> _dicTaggedAddedDelegates = new LockingDictionary<object, NotifyCollectionChangedEventHandler>();
+        private readonly LockingDictionary<object, NotifyCollectionChangedEventHandler> _dicTaggedAddedBeforeClearDelegates = new LockingDictionary<object, NotifyCollectionChangedEventHandler>();
 
         /// <summary>
         /// Use in place of CollectionChanged Adder
@@ -69,6 +70,56 @@ namespace Chummer
         {
             add => throw new NotSupportedException("TaggedObservableCollection should use AddTaggedCollectionChanged method instead of adding to CollectionChanged");
             remove => throw new NotSupportedException("TaggedObservableCollection should use RemoveTaggedCollectionChanged method instead of removing from CollectionChanged");
+        }
+
+        /// <summary>
+        /// Use in place of CollectionChanged Adder
+        /// </summary>
+        /// <param name="objTag">Tag to associate with added delegate</param>
+        /// <param name="funcDelegateToAdd">Delegate to add to CollectionChanged</param>
+        /// <returns>True if delegate was successfully added, false if a delegate already exists with the associated tag.</returns>
+        public bool AddTaggedBeforeClearCollectionChanged(object objTag, NotifyCollectionChangedEventHandler funcDelegateToAdd)
+        {
+            if (_dicTaggedAddedBeforeClearDelegates.TryAdd(objTag, funcDelegateToAdd))
+            {
+                base.CollectionChanged += funcDelegateToAdd;
+                return true;
+            }
+            Utils.BreakIfDebug();
+            return false;
+        }
+
+        /// <summary>
+        /// Use in place of CollectionChanged Subtract
+        /// </summary>
+        /// <param name="objTag">Tag of delegate to remove from CollectionChanged</param>
+        /// <returns>True if a delegate associated with the tag was found and deleted, false otherwise.</returns>
+        public bool RemoveTaggedBeforeClearCollectionChanged(object objTag)
+        {
+            if (_dicTaggedAddedBeforeClearDelegates.TryRemove(objTag, out NotifyCollectionChangedEventHandler funcDelegateToRemove))
+            {
+                base.CollectionChanged -= funcDelegateToRemove;
+                return true;
+            }
+            Utils.BreakIfDebug();
+            return false;
+        }
+
+        /// <inheritdoc />
+        public override event NotifyCollectionChangedEventHandler BeforeClearCollectionChanged
+        {
+            add => throw new NotSupportedException("TaggedObservableCollection should use AddTaggedBeforeClearCollectionChanged method instead of adding to BeforeClearCollectionChanged");
+            remove => throw new NotSupportedException("TaggedObservableCollection should use RemoveTaggedBeforeClearCollectionChanged method instead of removing from BeforeClearCollectionChanged");
+        }
+
+        protected override void Dispose(bool disposing)
+        {
+            if (disposing)
+            {
+                _dicTaggedAddedDelegates.Dispose();
+                _dicTaggedAddedBeforeClearDelegates.Dispose();
+            }
+            base.Dispose(disposing);
         }
     }
 }
